[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/GroundEye_group.gd" type="Script" id=2]
[ext_resource path="res://Character/GroundEye_Boss.tscn" type="PackedScene" id=3]

[node name="GroundEye_group" type="Node2D"]
script = ExtResource( 2 )

[node name="GroundEye_Boss" parent="." instance=ExtResource( 3 )]
position = Vector2( 56, 160 )

[node name="GroundEye_Boss2" parent="." instance=ExtResource( 3 )]
position = Vector2( 124, 160 )
type = 1

[node name="GroundEye_Boss3" parent="." instance=ExtResource( 3 )]
position = Vector2( 196, 160 )

[node name="GroundEye_Boss4" parent="." instance=ExtResource( 3 )]
position = Vector2( 264, 160 )
type = 1
